Add Cloudflare settings configuration and refactor Worker
Updated the application to read Cloudflare settings from
`appsettings.json`, including the URL to check. Introduced
the `CloudflareSettings` class for configuration management.
Refactored the `Worker` class to use dependency injection
for settings, replacing hardcoded values. Removed some
file check error handling and disabled logging for
cloudflared process output, improving configurability
and maintainability.

--- a/CloudFlaredWorker/appsettings.json
+++ b/CloudFlaredWorker/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Cloudflare": {
+    "UrlToCheck": "http://192.168.100.27:3001/info"
   }
 }
